tests/ui/never_type/fallback_change/dont-suggest-turbofish-from-expansion.stderr
error[E0277]: the trait bound `!: Default` is not satisfied
  --> $DIR/dont-suggest-turbofish-from-expansion.rs:12:23
   |
LL |         let created = create_ok_default()?;
   |                       ^^^^^^^^^^^^^^^^^^^ the trait `Default` is not implemented for `!`
   |
   = note: this error might have been caused by changes to Rust's type-inference algorithm (see issue #148922 <https://github.com/rust-lang/rust/issues/148922> for more information)
   = help: you might have intended to use the type `()` here instead
note: required by a bound in `create_ok_default`
  --> $DIR/dont-suggest-turbofish-from-expansion.rs:3:8
   |
LL | fn create_ok_default<C>() -> Result<C, ()>
   |    ----------------- required by a bound in this function
LL | where
LL |     C: Default,
   |        ^^^^^^^ required by this bound in `create_ok_default`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
